RESOLVED FIXED186405
[Win] Fix initial value of HANDLE to INVALID_HANDLE_VALUE
https://bugs.webkit.org/show_bug.cgi?id=186405
Summary [Win] Fix initial value of HANDLE to INVALID_HANDLE_VALUE
Basuke Suzuki
Reported 2018-06-07 12:11:30 PDT
Bug fix. Invalid HANDLE must not has nullptr, but INVALID_HANDLE_VALUE.
Attachments
PATCH (1.75 KB, patch)
2018-06-08 13:05 PDT, Basuke Suzuki
no flags
Basuke Suzuki
Comment 1 2018-06-08 13:05:36 PDT
Per Arne Vollan
Comment 2 2018-06-08 13:46:52 PDT
Comment on attachment 342309 [details] PATCH R=me.
WebKit Commit Bot
Comment 3 2018-06-08 14:07:04 PDT
Comment on attachment 342309 [details] PATCH Clearing flags on attachment: 342309 Committed r232639: <https://trac.webkit.org/changeset/232639>
WebKit Commit Bot
Comment 4 2018-06-08 14:07:05 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-06-08 14:13:24 PDT
Note You need to log in before you can comment on or make changes to this bug.