[Win] Fix initial value of HANDLE to INVALID_HANDLE_VALUE https://bugs.webkit.org/show_bug.cgi?id=186405

The handle was not initialized at all. Initialized with INVALID_HANDLE_VALUE.

Reviewed by Per Arne Vollan.

* Platform/IPC/Attachment.h:
* Platform/IPC/win/AttachmentWin.cpp:
(IPC::Attachment::decode):


Canonical link: https://commits.webkit.org/201803@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232639 268f45cc-cd09-0410-ab3c-d52691b4dbfc